# reliaware-platform

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile  configure
compat/: CMakeLists.txt
compat/include/reliaware/: in.hxx
docs/llrpc/: llrpc.md
modules/: CMakeLists.txt
modules/command/: CMakeLists.txt
modules/command/include/reliaware/: command.hxx
modules/command/src/: command.cxx
modules/coordination/: CMakeLists.txt
modules/coordination/include/reliaware/coordination/: lock.hxx
modules/coordination/src/: lock.cxx
modules/network/: CMakeLists.txt
modules/network/include/reliaware/: address.hxx  buffer.hxx  channel.hxx  connection.hxx  event.hxx  listener.hxx  server.hxx  socket.hxx
modules/network/include/reliaware/network/: address.hxx  buffer.hxx  channel.hxx  connection.hxx  domain.hxx  event.hxx  ipv4_domain.hxx  ipv6_domain.hxx  listener.hxx  local_domain.hxx  server.hxx  socket.hxx
modules/network/src/: address.cxx  buffer.cxx  connection.cxx  ipv4_domain.cxx  ipv6_domain.cxx  listener.cxx  local_domain.cxx  socket.cxx
modules/service/: CMakeLists.txt
modules/service/include/reliaware/: pidfile.hxx  service.hxx
modules/service/src/: pidfile.cxx  service.cxx
services/: CMakeLists.txt
services/network/: CMakeLists.txt
services/registry/: CMakeLists.txt
services/transport/: CMakeLists.txt
services/transport/src/: main.cxx
tools/: CMakeLists.txt
